--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,36 +1,26 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
-trigger:
-- main
-
 pool:
-  vmImage: ubuntu-latest
-strategy:
-  matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
-
+  name: Azure Pipelines
 steps:
+- bash: |
+   if [ -f extensions.csproj ]
+   then
+       dotnet build extensions.csproj --output ./bin
+   fi
+  displayName: 'Build extensions'
 - task: UsePythonVersion@0
+  displayName: 'Use Python 3.6'
   inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
-
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
-  displayName: 'Install dependencies'
-
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+    versionSpec: 3.6
+- bash: |
+   python3.6 -m venv worker_venv
+   source worker_venv/bin/activate
+   pip3.6 install setuptools
+   pip3.6 install -r requirements.txt
+  displayName: 'Install Application Dependencies'
+- task: ArchiveFiles@2
+  displayName: 'Archive files'
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
